# MTRN4231

./: .gitignore  READ ME VISION+TRANSFORM+TAKE_IMAGE.txt  README.md  __init__.py  ros2node.py  testing.py
end_effector/: README.md
end_effector/arduino/: README.md  Soil_moisture_reading.ino  Soil_test_for_ur5e.ino
end_effector/arduino/Soil_moisture_reading/: Soil_moisture_reading.ino
end_effector/arduino/Soil_test_for_ur5e/: Soil_test_for_ur5e.ino
endeffector_description/: package.xml  setup.cfg
endeffector_description/launch/: display.launch.py  endeffector_withModel.launch.py
endeffector_description/meshes/: Capacative_Soil_Moisture_Sensor_v1.2_v2_1.stl  base_link.stl
endeffector_description/urdf/: endeffector.xacro  materials.xacro  ur_with_endeffector.xacro
img/: demo_video.mov
moveit_planning_server/src/: moveit_server.cpp
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/src/blue_detector/: package.xml  setup.cfg  setup.py
ros2_ws/src/blue_detector/blue_detector/: ros2commands.py  testing.py
ros2_ws/src/blue_detector/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/blue_detector/install/blue_detector/share/blue_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/install/blue_detector_msgs/share/blue_detector_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/install/blue_detector_msgs/share/blue_detector_msgs/cmake/: blue_detector_msgsConfig.cmake  blue_detector_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  blue_detector_msgs__rosidl_typesupport_introspection_cExport.cmake  blue_detector_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_blue_detector_msgs__rosidl_generator_cExport-noconfig.cmake  export_blue_detector_msgs__rosidl_generator_cExport.cmake  export_blue_detector_msgs__rosidl_generator_cppExport.cmake  export_blue_detector_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
ros2_ws/src/install/blue_detector_msgs/share/blue_detector_msgs/msg/: MarkerData.idl
ros2_ws/src/interface/: CMakeLists.txt
soil_sampler/: CMakeLists.txt  package.xml
soil_sampler/src/install/: local_setup.sh  setup.sh
soil_sampler/src/interfaces/: package.xml
soil_sampler/src/moveit_planning_server/: CMakeLists.txt
src/blue_detector/: setup.py
src/blue_detector/blue_detector/: PublishFinal.py  ros2node.py  testnode.py  tf_utils.py
src/blue_detector/launch/: vision_launch.py
src/brain/: CMakeLists.txt  README.md  package.xml
src/brain/include/brain/: brain_node.hpp  robot_interface.hpp
src/brain/include/brain/routines/: heat_map_routine.hpp  soil_routine.hpp  topography_routine.hpp  vertical_profile_routine.hpp
src/brain/launch/: system_launch.py
src/brain/src/: brain.cpp
src/brain/src/routines/: heat_map_routine.cpp  soil_routine.cpp  topography_routine.cpp  vertical_profile_routine.cpp
src/brain/test_nodes/: dummy_inputs.py
src/endeffector_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/endeffector_description/launch/: display.launch.py  endeffector_withModel.launch.py  gazebo.launch.py  ur_with_endeffector.launch.py
src/endeffector_description/meshes/: Component3_1.stl
src/endeffector_description/rviz/: display.rviz
src/endeffector_description/urdf/: endeffector (1).xacroZone.Identifier  endeffector.gazebo  endeffector.trans  endeffector.xacro  endeffector.xacroZone.Identifier  materials.xacro  ur_with_endeffector (1).xacroZone.Identifier  ur_with_endeffector.xacro  ur_with_endeffector.xacroZone.Identifier
src/endeffector_description/urdf/old/: endeffector.xacro  robot.urdf  ur_with_endeffector.xacro
src/install/: local_setup.sh  setup.sh
src/interface/: CMakeLists.txt
src/interface/msg/: MarkerArray2D.msg
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Marker2D.msg  Marker2DArray.msg  MarkerData.msg
src/interfaces/srv/: BrainCmd.srv  MoveRequest.srv  VisionCmd.srv
src/lab4-main/install/: local_setup.sh  setup.sh
src/lab4-main/install/interface/share/interface/: local_setup.sh  package.sh  package.xml
src/moveit_planning_server/: CMakeLists.txt  package.xml
src/moveit_planning_server/launch/: moveit_planning.launch.py
src/moveit_planning_server/src/: moveit_server.cpp
src/take_image/: package.xml  setup.cfg  setup.py
src/take_image/launch/: take_image_launch.py
src/take_image/take_image/: camera_run.py  ros2node.py
src/teensy_bridge/: package.xml  setup.cfg  setup.py
src/teensy_bridge/launch/: teensy_bridge_launch.py
src/teensy_bridge/teensy_bridge/: teensy_bridge_node.py
src/transformation/: package.xml  setup.cfg  setup.py
src/transformation/launch/: transformation.py
src/transformation/transformation/: tf_main.py  tf_publisher.py  tf_subscriber.py  tf_utils.py
src/ur5_moveit_rqt/: package.xml  plugin.xml  setup.cfg  setup.py
src/ur5_moveit_rqt/resource/: ur5_moveit_rqt
src/ur5_moveit_rqt/ur5_moveit_rqt/: ur5_moveit_plugin.py
src/ur_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ur_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur_servo.yaml
src/ur_moveit_config/launch/: ur_moveit.launch.py
src/ur_moveit_config/rviz/: view_robot.rviz
src/ur_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
src/ur_moveit_config/ur_moveit_config/: launch_common.py
src/vision/: package.xml  setup.cfg  setup.py
src/vision/launch/: vision_launch.py
src/vision/vision/: alternative.py  camera_run.py  ros2node.py  test.py  vision_basic.py  vision_main.py
teensy_bridge/: setup.py
yolo_dataset/: my_dataset.yaml
yolo_dataset/train/: labels.cache
yolo_dataset/train/labels/: Screenshot from 2025-10-22 12-45-39.txt  Screenshot from 2025-11-10 12-35-18.txt  Screenshot from 2025-11-10 12-35-37.txt  Screenshot from 2025-11-10 12-35-49.txt  image1.txt  image2.txt  image4.txt  (+1 more)
yolo_dataset/val/: labels.cache
(+138 files in other folders)
