cmake_minimum_required(VERSION 3.8)
project(brain)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(interfaces REQUIRED)
find_package(visualization_msgs REQUIRED)

add_executable(brain src/brain.cpp)

ament_target_dependencies(
  brain rclcpp tf2 tf2_ros geometry_msgs interfaces tf2_ros)

install(TARGETS
brain
  DESTINATION lib/${PROJECT_NAME})

install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
)

install(PROGRAMS
  test_nodes/dummy_inputs.py
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()