cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_STANDARD 14)

project(endeffector_description)

# find dependencies
find_package(ament_cmake REQUIRED)

# For each subfolder, find any more installation rules.
install(
	DIRECTORY launch meshes rviz urdf
	DESTINATION share/${PROJECT_NAME}
)

ament_package()