<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>Message and service interface definitions for the MTRN4231 project</description>

  <maintainer email="z5423085@ad.unsw.edu.au">mlsbems</maintainer>
  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generator and runtime -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>

  <!-- Mark as interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Optional test dependencies (can keep or remove) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
