<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>Custom message and service definitions for soil sampling robot</description>

  <maintainer email="z5423085@ad.unsw.edu.au">mlsbems</maintainer>
  <license>Apache-2.0</license>

  <!-- Required for all ROS 2 interface packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl: generates C, C++, Python, and type-support -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencies referenced inside messages -->
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
