<?xml version="1.0"?>
<package format="3">
  <name>moveit_planning_server</name>
  <version>0.1.0</version>
  <description>Simple MoveIt service server</description>

  <maintainer email="you@example.com">You</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
