<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transformation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mtrn@gmail.com">davidnie</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <!-- Add TF2 dependencies -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- Add Realsense dependency -->
  <depend>librealsense2</depend>
  <depend>interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>